--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,9 +19,9 @@
     grid-template-rows: repeat(5, 400px);
     grid-template-areas: 
     "nav1 main1"
-    "nav2 main2"
-    "nav3 main3"
-    "nav4 main4"
+    "main2 main2"
+    "main3 main4"
+    "main4 main5"
     "nav5 footer"
     ;
     grid-gap: 30px;
