--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -3,234 +3,13 @@
   padding: 0;
 }
 
-.bodyindex {
+body {
   background-color: black;
   width: 100%;
   color: whitesmoke;
-}
-
-.sections {
-  display: -ms-grid;
-  display: grid;
-  background-color: black;
-  width: 100%;
-  color: whitesmoke;
-  -ms-grid-columns: 300px 1fr;
-      grid-template-columns: 300px 1fr;
-  -ms-grid-rows: (400px)[5];
-      grid-template-rows: repeat(5, 400px);
-      grid-template-areas: "nav1 mainst1" "mainst2 mainst2" "mainst3 mainst3" "mainst4 mainst4" "footer footer";
-}
-
-.nav1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: nav1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.nav2 {
-  grid-area: nav2;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.nav3 {
-  grid-area: nav3;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.nav4 {
-  grid-area: nav4;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.nav5 {
-  grid-area: nav5;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.head {
-  grid-area: main1;
-}
-
-.head {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-self: center;
-  width: 300px;
-  height: 300px;
-  background-image: url(../media/icons/bienvenida.png);
-  background-size: 100% 100%;
-  border-radius: 20px;
-}
-
-.main2 {
-  grid-area: main2;
-}
-
-.minigallery {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.eva {
-  width: 500px;
-  height: 200px;
-}
-
-.godz {
-  width: 500px;
-  height: 200px;
-}
-
-.main3 {
-  grid-area: main3;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.galeria {
-  grid-area: main4;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -ms-flex-line-pack: justify;
-      align-content: space-between;
-}
-
-.controller {
-  width: 300px;
-  height: 300px;
-}
-
-.keyboard {
-  width: 300px;
-  height: 300px;
-}
-
-.doom {
-  width: 300px;
-  height: 300px;
-}
-
-.metroyard {
-  width: 300px;
-  height: 300px;
-}
-
-.mainst1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  grid-area: mainst1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.imgst {
-  width: 200px;
-  height: 200px;
-}
-
-.mainst2 {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: mainst2;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.mainst3 {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: mainst3;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.mainst4 {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: mainst4;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.dropdown {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: nav1;
 }
 
 footer {
-  -ms-grid-row: 5;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: footer;
   display: -webkit-box;
   display: -ms-flexbox;
