--- a/style/estilos.scss
+++ b/style/estilos.scss
@@ -6,7 +6,7 @@
 
 
 
-.bodyindex { 
+body { 
  
     background-color: rgb(0, 0, 0);
     width: 100%;
@@ -15,159 +15,6 @@
    
 } 
 
-.sections {
-    display: grid;
-    background-color: rgb(0, 0, 0);
-    width: 100%;
-    color: whitesmoke;
-    grid-template-columns: 300px 1fr;
-    grid-template-rows: repeat(5, 400px);
-    grid-template-areas: 
-    "nav1 mainst1"
-    "mainst2 mainst2"
-    "mainst3 mainst3"
-    "mainst4 mainst4"
-    "footer footer"
-    ;
-
-}
-
-.nav1 {
-    grid-area: nav1;
-    display: flex;
-    align-items: center;
-}
-
-.nav2 {
-    grid-area: nav2;
-    display: flex;
-    align-items: center;
-}
-
-.nav3 {
-    grid-area: nav3;
-    display: flex;
-    align-items: center;
-}
-
-.nav4 {
-    grid-area: nav4;
-    display: flex;
-    align-items: center;
-}
-
-.nav5 { 
-    grid-area: nav5;
-    display: flex;
-    align-items: center;
-}
-
-
-.head {
-    grid-area: main1;
-}
-.head{
-    display: flex;
-    justify-self: center;
-    width: 300px;
-    height: 300px;
-    background-image: url(../media/icons/bienvenida.png);
-    background-size: 100% 100%;
-    border-radius: 20px;
-}
-
-
-.main2{
-    grid-area: main2;
-}
-
-.minigallery {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.eva {
-    width: 500px;
-    height: 200px;
-}
-
-.godz {
-    width: 500px;
-    height: 200px;
-}
-
-.main3 {
-    grid-area: main3;
-    display: flex;
-    flex-direction: row;
-}
-
-.galeria {
-    grid-area: main4;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: space-between;
-}
-
-.controller {
-    width: 300px;
-    height: 300px;
-}
-
-.keyboard {
-    width: 300px;
-    height: 300px;
-}
-
-.doom {
-    width: 300px;
-    height: 300px;
-}
-
-.metroyard {
-    width: 300px;
-    height: 300px;
-}
-
-.mainst1 {
-    grid-area: mainst1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
-
-.imgst {
-    width: 200px;
-    height: 200px;
-}
-
-
-
-.mainst2 {
-    grid-area: mainst2;
-    display: flex;
-    align-items: center;
-
-}
-
-.mainst3 {
-    grid-area: mainst3;
-    display: flex;
-    align-items: center;
-}
-
-.mainst4 {
-    grid-area: mainst4;
-    display: flex;
-    align-items: center;
-}
-
-.dropdown {
-    grid-area: nav1;
-}
 
 
 
