aplicando sass basico

--- a/style/estilos.scss
+++ b/style/estilos.scss
@@ -1,17 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 *{
     margin: 0;
     padding: 0;
 }
 
-
+$font-stack: open sans, sans serif;
+$primary-color: whitesmoke
+;
 
 
 body { 
- 
+    font: 100% $font-stack;
+    color: $primary-color;
     background-color: rgb(0, 0, 0);
     width: 100%;
-    color: whitesmoke;
-    
+        
    
 } 
 
