--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,12 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
+  font: 100% open sans, sans serif;
+  color: whitesmoke;
   background-color: black;
   width: 100%;
-  color: whitesmoke;
 }
 
 .imgcl {
