--- a/style/estilos.scss
+++ b/style/estilos.scss
@@ -9,6 +9,20 @@ $font-stack: open sans, sans serif;
 $primary-color: whitesmoke
 ;
 
+@mixin container($ancho, $alto, $color) {
+    width: $ancho;
+    height: $alto;
+    background-color: $color;
+    border-radius: 20px;
+    text-align: center;
+    margin: 5px;
+  } 
+
+  %img {
+    width: 500px;
+    height: 500px;
+    border-radius: 50px;
+  }
 
 body { 
     font: 100% $font-stack;
@@ -20,17 +34,22 @@ body {
 } 
 
 .imgcl {
-    width: 300px;
-    height: 300px;
+    @extend %img;
 }
 
 
 
+.noti1 {
+    @include container(100%,370px,rgb(43, 26, 26))
+}
 
+.noti2 {
+    @include container(100%,300px,rgb(41, 41, 41))
+}
 
-
-
-
+.noti3 {
+    @include container(100%,150px,rgb(51, 51, 51))
+}
 
 
 
