--- a/style/estilos.scss
+++ b/style/estilos.scss
@@ -1,44 +1,287 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+$font-stack: open sans,
+sans serif;
+$primary-color: whitesmoke;
 
-*{
-    margin: 0;
-    padding: 0;
+
+* {
+    box-sizing: border-box;
 }
 
-$font-stack: open sans, sans serif;
-$primary-color: whitesmoke
-;
-
-@mixin container($ancho, $alto, $color) {
-    width: $ancho;
-    height: $alto;
-    background-color: $color;
-    border-radius: 20px;
-    text-align: center;
-    margin: 5px;
-  } 
-
-  %img {
-    width: 500px;
-    height: 500px;
-    border-radius: 50px;
-  }
-
-body { 
+body {
     font: 100% $font-stack;
     color: $primary-color;
     background-color: rgb(0, 0, 0);
     width: 100%;
-        
-   
-} 
 
-.imgcl {
-    @extend %img;
+
+}
+
+h2 {
+    text-align: center;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+
+}
+
+.row {
+    text-align: center;
+    align-items: center;
+    
+}
+
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+}
+
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img.top {
+    border-radius: 50%;
+    width: auto;
+    filter: drop-shadow(20px 10px 10px grey);
+}
+
+.menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu li {
+    padding: 8px;
+    margin-bottom: 7px;
+    background-color: #000000;
+    color: $primary-color;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    text-align: center;
+}
+
+.menu li:hover {
+    background-color: #363636;
+}
+
+.menu a {
+    color: grey;
+}
+
+.menu a:hover {
+    color: $primary-color;
 }
 
 
 
+.intro {
+    text-align: center;
+}
+
+
+.footer {
+    background-color: #000000;
+    color: $primary-color;
+    text-align: center;
+    font-size: 12px;
+    padding: 15px;
+}
+
+[class*="col-"] {
+    width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+
+    .col-s-1 {
+        width: 8.33%;
+    }
+
+    .col-s-2 {
+        width: 16.66%;
+    }
+
+    .col-s-3 {
+        width: 25%;
+    }
+
+    .col-s-4 {
+        width: 33.33%;
+    }
+
+    .col-s-5 {
+        width: 41.66%;
+    }
+
+    .col-s-6 {
+        width: 50%;
+    }
+
+    .col-s-7 {
+        width: 58.33%;
+    }
+
+    .col-s-8 {
+        width: 66.66%;
+    }
+
+    .col-s-9 {
+        width: 75%;
+    }
+
+    .col-s-10 {
+        width: 83.33%;
+    }
+
+    .col-s-11 {
+        width: 91.66%;
+    }
+
+    .col-s-12 {
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+
+    .col-1 {
+        width: 8.33%;
+    }
+
+    .col-2 {
+        width: 16.66%;
+    }
+
+    .col-3 {
+        width: 25%;
+    }
+
+    .col-4 {
+        width: 33.33%;
+    }
+
+    .col-5 {
+        width: 41.66%;
+    }
+
+    .col-6 {
+        width: 50%;
+    }
+
+    .col-7 {
+        width: 58.33%;
+    }
+
+    .col-8 {
+        width: 66.66%;
+    }
+
+    .col-9 {
+        width: 75%;
+    }
+
+    .col-10 {
+        width: 83.33%;
+    }
+
+    .col-11 {
+        width: 91.66%;
+    }
+
+    .col-12 {
+        width: 100%;
+    }
+}
+
+.social-media ul {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    justify-content: center;
+}
+
+.social-media ul li {
+    list-style-type: none;
+    margin: 0 15px;
+}
+
+.social-media ul li .fab {
+    font-size: 30px;
+    line-height: 60px;
+    transition: 0.6s;
+    color: $primary-color;
+}
+
+.social-media ul li .fa-solid {
+    font-size: 30px;
+    line-height: 60px;
+    transition: 0.6s;
+    color: $primary-color;
+}
+
+.social-media ul li a {
+    display: block;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    position: relative;
+    background-color: #000;
+    text-align: center;
+    box-shadow: 0 05px 4px rgba(153, 181, 145, 0.3);
+}
+
+.social-media ul li .fab:hover {
+    color: $primary-color;
+}
+
+.social-media ul li a:hover {
+    transform: translate(0, -15%);
+    transition: 0.5s;
+}
+
+.social-media ul li:nth-child(1) a:hover {
+    background-color: #3b5998;
+}
+
+.social-media ul li:nth-child(2) a:hover {
+    background-color: #e4405f;
+}
+
+.social-media ul li:nth-child(3) a:hover {
+    background-color: #ff0000;
+}
+
+.social-media ul li:nth-child(4) a:hover {
+    background-color: #1da1f2;
+}
+
+.social-media ul li:nth-child(5) a:hover {
+    background-color: #7289DA;
+}
+
+.social-media ul li:nth-child(6) a:hover {
+    background-color: #4b4b4b;
+}
+
+img.reco {
+    width: 400px;
+    height: 250px;
+}
+
+img {
+    height: 500px;
+}
 
 
 
